# castcommon

./: CMakeLists.txt  README.md  audio.c  audio.h  block_queue.c  block_queue.h  castspeaker.h  common.h  connection.c  connection.h  crc.c  crc.h  error.h  ip.c  ip.h  log.c  log.h  speaker_struct.c  speaker_struct.h  synctime.c  synctime.h  utils.c  utils.h
codec/: wave.c  wave.h
dsp/: mixer.c  mixer.h  resample.c  resample.h
event/: epoll.c  epoll.h  event.c  event.h  poll.c  poll.h  protocol.h  receive.c  receive.h  select.c  select.h  send.c  send.h  udp.c  udp.h
package/: control.h  detect.h  package.c  pcm.h
pipeline/: element.c  element.h  pipeline.c  pipeline.h
test/: test_main.c
